# Camera-Geometry

./: README.md  pyproject.toml
scripts/: pointcloud_viewer.py
src/camera_geometry/: __init__.py  camera.py  euclidean_space.py  image_warper.py  pointcloud_viewer.py  projective_space.py  space.py  vector_ops.py
tests/: test_euclidean_space.py  test_image_warper.py  test_projective_space.py
