[project]
name = "camera-geometry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tiago G. Oliveira", email = "tiagojro@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
